Added utilization gauge,, added angular material to the project, tested cards module for the charts

--- a/src/app/components/graph-panel/graph-panel.component.html
+++ b/src/app/components/graph-panel/graph-panel.component.html
@@ -1,3 +1,4 @@
 <app-consumption-line-chart></app-consumption-line-chart>
 <app-consumption-bar-chart></app-consumption-bar-chart>
 <app-consumption-total-line-chart></app-consumption-total-line-chart>
+<app-utilization-line-gauge></app-utilization-line-gauge>
