--- a/src/app/components/consumption-line-chart/consumption-line-chart.component.html
+++ b/src/app/components/consumption-line-chart/consumption-line-chart.component.html
@@ -1,15 +1,20 @@
 <!-- <h3 *ngFor="let message of telemetryList">DATE: {{message.name}} AND WATTS CONSUMPTION:{{message.value}}</h3> -->
-<ngx-charts-line-chart
-  [view]="view"
-  [scheme]="colorScheme"
-  [legend]="legend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxis]="xAxis"
-  [yAxis]="yAxis"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel"
-  [timeline]="timeline"
-  [results]="metrics"
-  >
-</ngx-charts-line-chart>
+<mat-card>
+  <mat-card-title>Consumption of Microwave</mat-card-title>
+  <mat-card-content>
+    <ngx-charts-line-chart
+    [view]="view"
+    [scheme]="colorScheme"
+    [legend]="legend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxis]="xAxis"
+    [yAxis]="yAxis"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    [timeline]="timeline"
+    [results]="metrics"
+    >
+  </ngx-charts-line-chart>
+  </mat-card-content>
+</mat-card>
