--- a/src/app/components/consumption-total-line-chart/consumption-total-line-chart.component.html
+++ b/src/app/components/consumption-total-line-chart/consumption-total-line-chart.component.html
@@ -1,14 +1,20 @@
-<ngx-charts-line-chart
-  [view]="view"
-  [scheme]="colorScheme"
-  [legend]="legend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxis]="xAxis"
-  [yAxis]="yAxis"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel"
-  [timeline]="timeline"
-  [results]="metrics"
-  >
-</ngx-charts-line-chart>
+<mat-card>
+  <mat-card-title>Consumption over Time</mat-card-title>
+  <mat-card-content>
+    <ngx-charts-line-chart
+    [view]="view"
+    [scheme]="colorScheme"
+    [legend]="legend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxis]="xAxis"
+    [yAxis]="yAxis"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    [timeline]="timeline"
+    [results]="metrics"
+    >
+    </ngx-charts-line-chart>
+  </mat-card-content>
+</mat-card>
+
