--- a/src/app/components/utilization-line-gauge/utilization-line-gauge.component.html
+++ b/src/app/components/utilization-line-gauge/utilization-line-gauge.component.html
@@ -1,7 +1,13 @@
-<ngx-charts-linear-gauge
-  [view]="view"
-  [scheme]="colorScheme"
-  [value]="value"
-  [previousValue]="previousValue"
-  [units]="units">
-</ngx-charts-linear-gauge>
+<mat-card>
+  <mat-card-title>Utilization of Device</mat-card-title>
+  <mat-card-content>
+    <ngx-charts-linear-gauge
+      [view]="view"
+      [scheme]="colorScheme"
+      [value]="value"
+      [previousValue]="previousValue"
+      [units]="units">
+    </ngx-charts-linear-gauge>
+</mat-card-content>
+</mat-card>
+
