Added content for users and devices pages, created devices and users services, added prototype buttons for CRUD operations

--- a/src/app/components/pages/devices/device-screen/device-screen.component.html
+++ b/src/app/components/pages/devices/device-screen/device-screen.component.html
@@ -1,1 +1,52 @@
-<p>device-screen works!</p>
+<div class="add-button d-flex justify-content-end p-2" >
+  <app-button buttonColor="accent" buttonText="Add Device"></app-button>
+  <app-button buttonColor="warn" buttonText="Delete Device"></app-button>
+  <app-button buttonColor="" buttonText="Configure Device"></app-button>
+</div>
+
+<table mat-table [dataSource]="deviceList" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let device"> {{device._id}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let device"> {{device.device_name}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Details </th>
+      <td mat-cell *matCellDef="let element">
+        <app-button buttonColor="primary" buttonText="View"></app-button>
+      </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef> Edit </th>
+      <td mat-cell *matCellDef="let element">
+        <app-button buttonColor="warn" buttonText="Edit"></app-button>
+      </td>
+    </ng-container>
+
+        <!-- Symbol Column -->
+    <ng-container matColumnDef="history">
+        <th mat-header-cell *matHeaderCellDef> Maintenance History </th>
+        <td mat-cell *matCellDef="let element">
+            <app-button buttonColor="accent" buttonText="Maintenance History"></app-button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+  
