--- a/src/app/components/pages/power-and-utilization/graph-panel/graph-panel.component.html
+++ b/src/app/components/pages/power-and-utilization/graph-panel/graph-panel.component.html
@@ -1,4 +1,17 @@
-<app-consumption-line-chart></app-consumption-line-chart>
-<app-consumption-bar-chart></app-consumption-bar-chart>
-<app-consumption-total-line-chart></app-consumption-total-line-chart>
-<app-utilization-line-gauge></app-utilization-line-gauge>
+<div class="d-flex flex-row bd-highlight">
+    <div class="p-2 bd-highlight">
+        <app-consumption-line-chart></app-consumption-line-chart>
+    </div>
+    <div class="p-2 bd-highlight">
+        <app-consumption-bar-chart></app-consumption-bar-chart>
+    </div>
+</div>
+<div class="d-flex flex-row bd-highlight">
+    <div class="p-2 bd-highlight">
+        <app-consumption-total-line-chart></app-consumption-total-line-chart>
+    </div>
+    <div class="p-2 bd-highlight">
+        <app-utilization-line-gauge></app-utilization-line-gauge>
+    </div>
+</div>
+
