--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="nav-container">
-    <mat-sidenav #sidenav [opened]="isOpened" [disableClose]="true">
+    <mat-sidenav #start mode="over" fixedInViewport="true" #sidenav [opened]="isOpened" [disableClose]="true">
         <div class="mt-3">
             <app-side-nav-content (sideBarEvent)="toggleSideNav(); redirect($event)"></app-side-nav-content>
         </div>
