--- a/src/app/components/pages/devices/device-screen/device-screen.component.html
+++ b/src/app/components/pages/devices/device-screen/device-screen.component.html
@@ -1,5 +1,74 @@
+<!-- Modals -->
+<ng-template #content let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title" id="modal-basic-title">Add New User</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		<form>
+      <div class="mb-3">
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Device Name</mat-label>
+              <input
+                matInput
+                [(ngModel)]="formDeviceName"
+                id="devName"
+                placeholder=""
+                name="devName"
+              />
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Smart Plug</mat-label>
+            <mat-select [(ngModel)] = "formPlugId" name="role">
+              <mat-option *ngFor="let plug of smartPlugList" [value]="plug">
+                {{plug}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Threshold</mat-label>
+              <input
+                matInput
+                [(ngModel)] = "formThreshold"
+                id="threshold"
+                placeholder=""
+                name="threshold"
+              />
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Description</mat-label>
+              <textarea
+                matInput
+                [(ngModel)] = "formDeviceDescription"
+                id="desc"
+                placeholder=""
+                name="desc"
+                rows="10"
+              ></textarea>
+          </mat-form-field>
+        </div>
+			</div>
+		</form>
+	</div>
+	<div class="modal-footer">
+    <app-button buttonColor="primary" buttonText="Add" (clickEvent)="modal.close('Save click'); addNewDevice()"></app-button>
+		<!-- <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button> -->
+	</div>
+</ng-template>
+
 <div class="add-button d-flex justify-content-end p-2" >
-  <app-button buttonColor="accent" buttonText="Add Device"></app-button>
+  <app-button buttonColor="accent" buttonText="Add Device" (clickEvent)="open(content)"></app-button>
   <app-button buttonColor="warn" buttonText="Delete Device"></app-button>
   <app-button buttonColor="" buttonText="Configure Device"></app-button>
 </div>
@@ -8,6 +77,24 @@
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Checkbox Column -->
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                      [checked]="selection.hasValue() && isAllSelected()"
+                      [indeterminate]="selection.hasValue() && !isAllSelected()"
+                      [aria-label]="checkboxLabel()">
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox (click)="$event.stopPropagation()"
+                      (change)="$event ? selection.toggle(row) : null"
+                      [checked]="selection.isSelected(row)"
+                      [aria-label]="checkboxLabel(row)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
   
     <!-- Position Column -->
     <ng-container matColumnDef="position">
