--- a/src/app/components/pages/users/user-screen/user-screen.component.html
+++ b/src/app/components/pages/users/user-screen/user-screen.component.html
@@ -1,9 +1,65 @@
+<!-- Modals -->
+<ng-template #content let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title" id="modal-basic-title">Add New User</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		<form>
+      <div class="mb-3">
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Username</mat-label>
+              <input
+                matInput
+                [(ngModel)]="formUserName"
+                id="username"
+                placeholder=""
+                name="username"
+              />
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Password</mat-label>
+              <input
+                matInput
+                [(ngModel)] = "formPassword"
+                id="password"
+                placeholder=""
+                name="password"
+              />
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Role</mat-label>
+            <mat-select [(ngModel)] = "formRole" name="role">
+              <mat-option *ngFor="let role of userRoles" [value]="role.value">
+                {{role.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+			</div>
+		</form>
+	</div>
+	<div class="modal-footer">
+    <app-button buttonColor="primary" buttonText="Add" (clickEvent)="modal.close('Save click'); newUser()"></app-button>
+		<!-- <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button> -->
+	</div>
+</ng-template>
+<!-- ============================================= -->
+
 
 <div class="addButton d-flex justify-content-end p-2" >
-  <app-button buttonColor="accent" buttonText="Add User"></app-button>
+  <app-button buttonColor="accent" buttonText="Add User" (clickEvent)="open(content)"></app-button>
 </div>
 
-<table mat-table [dataSource]="userList" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -31,8 +87,8 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
-      <td mat-cell *matCellDef="let element">
-        <app-button buttonColor="warn" buttonText="Delete"></app-button>
+      <td mat-cell *matCellDef="let user">
+        <app-button buttonColor="warn" buttonText="Delete" (clickEvent)="deleteUser(user.username)"></app-button>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
