--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 html {background-color: rgba(0, 127, 254, 0.095);}
 html, body { height: 100%;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-overlay-container {
+    z-index: 9999 !important;
+}
