--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,5 +4,5 @@
     </div>
     
     <h1 class="mat">{{title}}</h1>
-    <app-button buttonColor="warn" buttonText="Log Out"></app-button>
+    <app-button buttonColor="warn" buttonText="Log Out" (clickEvent)="logOutSignal()"></app-button>
 </div>
