--- a/src/app/components/pages/users/user-screen/user-screen.component.html
+++ b/src/app/components/pages/users/user-screen/user-screen.component.html
@@ -49,7 +49,59 @@
 	</div>
 	<div class="modal-footer">
     <app-button buttonColor="primary" buttonText="Add" (clickEvent)="modal.close('Save click'); newUser()"></app-button>
-		<!-- <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button> -->
+	</div>
+</ng-template>
+
+<ng-template #editUser let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title" id="modal-basic-title">Add New User</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		<form>
+      <div class="mb-3">
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Username</mat-label>
+              <input
+                matInput
+                [(ngModel)]="formUserName"
+                id="username"
+                placeholder=""
+                name="username"
+              />
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Password</mat-label>
+              <input
+                matInput
+                [(ngModel)] = "formPassword"
+                id="password"
+                placeholder=""
+                name="password"
+              />
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Role</mat-label>
+            <mat-select [(ngModel)] = "formRole" name="role">
+              <mat-option *ngFor="let role of userRoles" [value]="role.value">
+                {{role.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+			</div>
+		</form>
+	</div>
+	<div class="modal-footer">
+    <app-button buttonColor="primary" buttonText="Add" (clickEvent)="modal.close('Save click'); updateUser(selectedUser)"></app-button>
 	</div>
 </ng-template>
 <!-- ============================================= -->
@@ -79,8 +131,8 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
-      <td mat-cell *matCellDef="let element">
-        <app-button buttonColor="primary" buttonText="Edit"></app-button>
+      <td mat-cell *matCellDef="let user">
+        <app-button buttonColor="primary" buttonText="Edit" (clickEvent)="open(editUser, user.username)"></app-button>
       </td>
     </ng-container>
   
