--- a/src/app/components/pages/users/user-screen/user-screen.component.html
+++ b/src/app/components/pages/users/user-screen/user-screen.component.html
@@ -70,6 +70,7 @@
                 id="username"
                 placeholder=""
                 name="username"
+                required="true"
               />
           </mat-form-field>
         </div>
@@ -83,6 +84,7 @@
                 id="password"
                 placeholder=""
                 name="password"
+                required="true"
               />
           </mat-form-field>
         </div>
