--- a/src/app/components/pages/power-and-utilization/graph-panel/graph-panel.component.html
+++ b/src/app/components/pages/power-and-utilization/graph-panel/graph-panel.component.html
@@ -1,4 +1,34 @@
 <div class="d-flex flex-row bd-highlight p-3 justify-content-start align-items-center">
+    <div class="d-flex m-3">
+        <mat-form-field appearance="outline">
+            <mat-label>Start Time</mat-label>
+            <input matInput
+                name="selected_time_A"
+                [format]="24"
+                [(ngModel)]="startTime"
+                [ngxMatTimepicker]="pickerA"
+                placeholder="16:00 PM"
+                readonly />
+            <mat-icon matSuffix (click)="pickerA.open()">
+            </mat-icon>
+        </mat-form-field>
+    </div>
+    To
+    <div class="d-flex m-3">
+        <mat-form-field appearance="outline">
+            <mat-label>End Time</mat-label>
+            <input matInput
+                name="selected_time_A"
+                [format]="24"
+                [(ngModel)]="endTime"
+                [ngxMatTimepicker]="pickerA"
+                placeholder="16:00"
+                readonly />
+            <mat-icon matSuffix (click)="pickerA.open()">
+            </mat-icon>
+        </mat-form-field>
+        <ngx-mat-timepicker #pickerA></ngx-mat-timepicker>
+    </div>
     <mat-form-field class="example-form-field m-3" appearance="outline">
         <mat-label>Date Range</mat-label>
         <mat-date-range-input
@@ -13,23 +43,23 @@
         <mat-datepicker-toggle matIconSuffix [for]="campaignOnePicker"></mat-datepicker-toggle>
         <mat-date-range-picker #campaignOnePicker></mat-date-range-picker>
     </mat-form-field>
-    <app-button buttonColor="primary" buttonText="Submit" (clickEvent)="null"></app-button>
+    <app-button buttonColor="primary" buttonText="Submit" (clickEvent)="handleSubmit()"></app-button>
 </div>
 
 <div class="d-flex flex-row bd-highlight">
     <div class="p-2 bd-highlight">
-        <app-consumption-line-chart></app-consumption-line-chart>
+        <app-consumption-line-chart startDate="{{startDate}}" endDate="{{endDate}}"></app-consumption-line-chart>
     </div>
     <div class="p-2 bd-highlight">
-        <app-consumption-bar-chart></app-consumption-bar-chart>
+        <app-consumption-bar-chart startDate="{{startDate}}" endDate="{{endDate}}"></app-consumption-bar-chart>
     </div>
 </div>
 <div class="d-flex flex-row bd-highlight">
     <div class="p-2 bd-highlight">
-        <app-consumption-total-line-chart></app-consumption-total-line-chart>
+        <app-consumption-total-line-chart startDate="{{startDate}}" endDate="{{endDate}}"></app-consumption-total-line-chart>
     </div>
     <div class="p-2 bd-highlight">
-        <app-utilization-line-gauge></app-utilization-line-gauge>
+        <app-utilization-line-gauge startDate="{{startDate}}" endDate="{{endDate}}"></app-utilization-line-gauge>
     </div>
 </div>
 
