--- a/src/app/components/pages/devices/device-screen/device-screen.component.html
+++ b/src/app/components/pages/devices/device-screen/device-screen.component.html
@@ -1,7 +1,8 @@
-<!-- Modals -->
+<!-- Modals - This uglyness can be seperated into template files but I have no idea how to that right now -->
+<!-- UPDATE/ ADD NEW DEVICE TO THE LIST -->
 <ng-template #content let-modal>
 	<div class="modal-header">
-		<h4 class="modal-title" id="modal-basic-title">Add New User</h4>
+		<h4 class="modal-title" id="modal-basic-title">Device Properties</h4>
 		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
 	</div>
 	<div class="modal-body">
@@ -62,15 +63,135 @@
 		</form>
 	</div>
 	<div class="modal-footer">
-    <app-button buttonColor="primary" buttonText="Submit" (clickEvent)="modal.close('Save click'); addNewDevice()"></app-button>
-		<!-- <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button> -->
+    <app-button buttonColor="primary" buttonText="Submit" (clickEvent)="modal.close('Save click'); isEdit === true ? updateDevice(selectedId) : addNewDevice()"></app-button>
 	</div>
 </ng-template>
+<!-- END OF EDIT/ ADD MODAL -->
+
+<!-- CONFIGURATION MODAL -->
+<ng-template #configure let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title" id="modal-basic-title">Configure Selected Devices</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		<form>
+      <div class="mb-3 justify-content-center">
+        <div class="d-flex flex-row bd-highlight mb-3 justify-content-around">
+          <!-- switch on/off -->
+          <div class="d-flex flex-column bd-highlight mb-3">
+            <div class="p-2 bd-highlight">Switch On/Off Selected Devices:</div>
+            <div class="p-2 bd-highlight">
+              <app-button class="mx-4" buttonColor="primary" buttonText="On" (clickEvent)="switchDevicesStatus('on')"></app-button>
+              <app-button buttonColor="primary" buttonText="Off" (clickEvent)="switchDevicesStatus('off')"></app-button>
+            </div>
+          </div>
+          <!-- Set report interval for device -->
+          <div class="d-flex flex-column bd-highlight mb-3">
+            <div class="p-2 bd-highlight">Set Report Interval for Devices:</div>
+            <div class="p-2 bd-highlight align-items-center">
+              <div class="d-flex justify-content-center input-wrapper">
+                <mat-form-field appearance="fill">
+                  <mat-label>Interval in seconds (1-600)</mat-label>
+                    <input
+                      matInput
+                      [(ngModel)] = "plugDelay"
+                      id="delay"
+                      placeholder=""
+                      name="delay"
+                    />
+                </mat-form-field>
+                <app-button buttonColor="primary" buttonText="Set Interval" (clickEvent)="setReportInterval()"></app-button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Switch after delay -->
+        <hr>
+        <div class="d-flex flex-column bd-highlight mb-3 mx-auto">
+          <div class="p-2 bd-highlight mx-auto">Switch Power Status after delay</div>
+          <div class="p-2 bd-highlight">
+            Time Delay:
+            <mat-form-field appearance="fill" class="mx-4">
+              <mat-label>Hours</mat-label>
+                <input
+                  matInput
+                  [(ngModel)] = "countDownHours"
+                  id="cdHrs"
+                  placeholder=""
+                  name="cdHrs"
+                />
+            </mat-form-field>
+            <mat-form-field appearance="fill" class="mx-4">
+              <mat-label>Minutes</mat-label>
+                <input
+                  matInput
+                  [(ngModel)] = "countDownMinutes"
+                  id="cdMins"
+                  placeholder=""
+                  name="cdMins"
+                />
+            </mat-form-field>
+            <app-button buttonText="Set" buttonColor="primary" (clickEvent)="switchStatusCd()"></app-button>
+          </div>
+        </div>
+        <!-- Time Range for On/Off -->
+        <hr>
+        <div class="d-flex flex-column bd-highlight mb-3 mx-auto">
+          <div class="p-2 bd-highlight mx-auto">Set Status For Period</div>
+          <div class="p-2 bd-highlight">
+            From:
+            <mat-form-field appearance="fill" class="mx-4">
+              <mat-label>Start Time</mat-label>
+                <input
+                  type="time"
+                  matInput
+                  [(ngModel)] = "formThreshold"
+                  id="threshold"
+                  placeholder=""
+                  name="threshold"
+                />
+            </mat-form-field>
+            To:
+            <mat-form-field appearance="fill" class="mx-4">
+              <mat-label>End Time</mat-label>
+                <input
+                  type="time"
+                  matInput
+                  [(ngModel)] = "formThreshold"
+                  id="threshold"
+                  placeholder=""
+                  name="threshold"
+                />
+            </mat-form-field>
+            <app-button buttonText="Set" buttonColor="primary"></app-button>
+            <div class="p-2 bd-highlight mx-auto">
+              Status:
+              <mat-radio-group aria-label="Select an option">
+                <mat-radio-button value="off">Off</mat-radio-button>
+                <mat-radio-button value="on">On</mat-radio-button>
+                <mat-radio-button value="prev">Prev</mat-radio-button>
+              </mat-radio-group>
+              
+            </div>
+          </div>
+        </div>
+			</div>
+		</form>
+	</div>
+	<div class="modal-footer">
+    (!) MQTT broker must be running.
+	</div>
+</ng-template>
+
+
+<!-- END OF CONFIGURATION MODAL -->
+
 
 <div class="add-button d-flex justify-content-end p-2" >
   <app-button buttonColor="accent" buttonText="Add Device" (clickEvent)="open(content)"></app-button>
   <app-button buttonColor="warn" buttonText="Delete Device" (clickEvent)="deleteDevices()"></app-button>
-  <app-button buttonColor="" buttonText="Configure Device"></app-button>
+  <app-button buttonColor="" buttonText="Configure Device" (clickEvent)="open(configure)"></app-button>
 </div>
 
 <table mat-table [dataSource]="deviceList" class="mat-elevation-z8">
@@ -106,7 +227,7 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let device"> {{device.device_name}} </td>
-    </ng-container>
+    </ng-container>1
   
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
