I am so not sure about what I'm about to do

--- a/src/app/components/pages/power-and-utilization/consumption-bar-chart/consumption-bar-chart.component.html
+++ b/src/app/components/pages/power-and-utilization/consumption-bar-chart/consumption-bar-chart.component.html
@@ -5,7 +5,7 @@
     <ngx-charts-bar-vertical
     [view]="view"
     [scheme]="colorScheme"
-    [results]="metrics"
+    [results]="totalCalculatedKWH"
     [gradient]="gradient"
     [xAxis]="xAxis"
     [yAxis]="yAxis"
