--- a/src/app/components/pages/power-and-utilization/consumption-total-line-chart/consumption-total-line-chart.component.html
+++ b/src/app/components/pages/power-and-utilization/consumption-total-line-chart/consumption-total-line-chart.component.html
@@ -14,6 +14,8 @@
     [yAxisLabel]="yAxisLabel"
     [timeline]="timeline"
     [results]="metrics"
+    [timeline]="true"
+    [autoScale]="true"
     >
     </ngx-charts-line-chart>
   </mat-card-content>
