POG: It actually worked

--- a/src/app/components/pages/power-and-utilization/consumption-line-chart/consumption-line-chart.component.html
+++ b/src/app/components/pages/power-and-utilization/consumption-line-chart/consumption-line-chart.component.html
@@ -14,6 +14,7 @@
     [xAxisLabel]="xAxisLabel"
     [yAxisLabel]="yAxisLabel"
     [timeline]="timeline"
+    [autoScale]="true"
     [results]="metrics"
     >
   </ngx-charts-line-chart>
