Added time pie chart the equipment was utilized rather than having a progress bar 0-100%

--- a/src/app/components/pages/power-and-utilization/graph-panel/graph-panel.component.html
+++ b/src/app/components/pages/power-and-utilization/graph-panel/graph-panel.component.html
@@ -11,7 +11,7 @@
         <app-consumption-total-line-chart [startDate]="startDate" [endDate]="endDate"></app-consumption-total-line-chart>
     </div>
     <div class="p-2 bd-highlight">
-        <app-utilization-line-gauge [startDate]="startDate" [endDate]="endDate"></app-utilization-line-gauge>
+        <app-working-time [startDate]="startDate" [endDate]="endDate"></app-working-time>
     </div>
 </div>
 
