--- a/src/app/components/pages/power-and-utilization/util-panel/util-panel.component.html
+++ b/src/app/components/pages/power-and-utilization/util-panel/util-panel.component.html
@@ -12,6 +12,7 @@
             readonly />
         <mat-icon matSuffix (click)="pickerA.open()">
         </mat-icon>
+        <ngx-mat-timepicker #pickerA></ngx-mat-timepicker>
     </mat-form-field>
 </div>
 To
@@ -19,16 +20,16 @@ To
     <mat-form-field appearance="outline">
         <mat-label>End Time</mat-label>
         <input matInput
-            name="selected_time_A"
+            name="selected_time_B"
             [format]="24"
             [(ngModel)]="endTime"
-            [ngxMatTimepicker]="pickerA"
+            [ngxMatTimepicker]="pickerB"
             placeholder="16:00"
             readonly />
-        <mat-icon matSuffix (click)="pickerA.open()">
+        <mat-icon matSuffix (click)="pickerB.open()">
         </mat-icon>
     </mat-form-field>
-    <ngx-mat-timepicker #pickerA></ngx-mat-timepicker>
+    <ngx-mat-timepicker #pickerB></ngx-mat-timepicker>
 </div>
     <mat-form-field class="example-form-field m-3" appearance="outline">
         <mat-label>Date Range</mat-label>
