--- a/src/app/components/pages/devices/device-screen/device-screen.component.html
+++ b/src/app/components/pages/devices/device-screen/device-screen.component.html
@@ -248,8 +248,8 @@
         <!-- Symbol Column -->
     <ng-container matColumnDef="history">
         <th mat-header-cell *matHeaderCellDef> Maintenance History </th>
-        <td mat-cell *matCellDef="let element">
-            <app-button buttonColor="accent" buttonText="Maintenance History"></app-button>
+        <td mat-cell *matCellDef="let device">
+            <app-button buttonColor="accent" buttonText="Maintenance History" (clickEvent)="handleMaintenanceRedirect(device._id)"></app-button>
         </td>
     </ng-container>
 
