--- a/src/app/components/pages/devices/device-details/device-details.component.html
+++ b/src/app/components/pages/devices/device-details/device-details.component.html
@@ -13,3 +13,17 @@
         </div>
     </mat-card-content>
 </mat-card>
+
+<mat-card class="m-3">
+    <mat-card-title class="m-2 d-flex justify-content-center">{{deviceDetails.device_name}}'s Overall Statistics</mat-card-title>
+    <mat-card-header></mat-card-header>
+    <mat-card-content class="d-flex justify-content-center">
+        <ngx-charts-number-card 
+            [view]="view" 
+            [scheme]="colorScheme" 
+            [results]="cardInformation" 
+            [cardColor]="cardColor"
+            >
+        </ngx-charts-number-card>
+    </mat-card-content>
+</mat-card>
