--- a/src/app/components/pages/power-and-utilization/consumption-line-chart/consumption-line-chart.component.html
+++ b/src/app/components/pages/power-and-utilization/consumption-line-chart/consumption-line-chart.component.html
@@ -1,6 +1,6 @@
 <!-- <h3 *ngFor="let message of telemetryList">DATE: {{message.name}} AND WATTS CONSUMPTION:{{message.value}}</h3> -->
 <mat-card>
-  <mat-card-title>Consumption of Microwave</mat-card-title>
+  <mat-card-title>Overall Consumption Over Time</mat-card-title>
   <hr>
   <mat-card-content>
     <ngx-charts-line-chart
