--- a/src/app/components/pages/power-and-utilization/consumption-total-line-chart/consumption-total-line-chart.component.html
+++ b/src/app/components/pages/power-and-utilization/consumption-total-line-chart/consumption-total-line-chart.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Consumption over Time</mat-card-title>
+  <mat-card-title>Individual Consumption over Time</mat-card-title>
   <hr>
   <mat-card-content>
     <ngx-charts-line-chart
