--- a/src/app/components/pages/power-and-utilization/consumption-bar-chart/consumption-bar-chart.component.html
+++ b/src/app/components/pages/power-and-utilization/consumption-bar-chart/consumption-bar-chart.component.html
@@ -1,8 +1,8 @@
 <mat-card>
-  <mat-card-title>Total Power Consumption</mat-card-title>
+  <mat-card-title>Total Power Consumption (kWh)</mat-card-title>
   <hr>
   <mat-card-content>
-    <ngx-charts-bar-vertical
+    <!-- <ngx-charts-bar-vertical
     [view]="view"
     [scheme]="colorScheme"
     [results]="totalCalculatedKWH"
@@ -15,7 +15,14 @@
     [xAxisLabel]="xAxisLabel"
     [yAxisLabel]="yAxisLabel"
   >
-    </ngx-charts-bar-vertical>
+    </ngx-charts-bar-vertical> -->
+    <ngx-charts-advanced-pie-chart
+    [view]="view"
+    [scheme]="colorScheme"
+    [results]="totalCalculatedKWH"
+    [gradient]="gradient"
+    >
+  </ngx-charts-advanced-pie-chart>
 </mat-card-content>
 </mat-card>
 
