--- a/src/app/components/pages/power-and-utilization/working-time/working-time.component.html
+++ b/src/app/components/pages/power-and-utilization/working-time/working-time.component.html
@@ -2,12 +2,26 @@
     <mat-card-title>Working Hours</mat-card-title>
     <hr>
     <mat-card-content>
-        <ngx-charts-advanced-pie-chart
+        <!-- <ngx-charts-advanced-pie-chart
         [view]="view"
         [scheme]="colorScheme"
         [results]="timeDisplayData"
         [gradient]="gradient"
         >
-      </ngx-charts-advanced-pie-chart>
+      </ngx-charts-advanced-pie-chart> -->
+      <ngx-charts-bar-vertical
+          [view]="view"
+          [scheme]="colorScheme"
+          [results]="timeDisplayData"
+          [gradient]="gradient"
+          [xAxis]="true"
+          [yAxis]="true"
+          [legend]="false"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          [xAxisLabel]="xAxisLabel"
+          [yAxisLabel]="yAxisLabel"
+      >
+      </ngx-charts-bar-vertical>
     </mat-card-content>
 </mat-card>
